add portfolio section

--- a/app/scss/base/_libs.scss
+++ b/app/scss/base/_libs.scss
@@ -1,20 +1,14 @@
-/* ---------------------------------------------------------
-                      Bootstrap grid
-   ---------------------------------------------------------*/
-//@import "../libs/bootstrap-grid/bootstrap-grid";
 
 /* ---------------------------------------------------------
                       FontAwesome
    ---------------------------------------------------------*/
 @import "../libs/font-awesome/font-awesome";
 
-
-
-
 /* ---------------------------------------------------------
-                      Mmenu
+                      Content-filter
    ---------------------------------------------------------*/
-//@import "../libs/jQuery.mmenu/jquery.mmenu.all";
+@import "../libs/content-filter/css/style";
+
 
 /* ---------------------------------------------------------
                       Humburgers
