--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -7,7 +7,6 @@
   position: relative;
   padding: 210px 0 50px;
   background: #e6e6e6;
-  text-align: center;
 
   &-photo {
     position: absolute;
@@ -31,10 +30,19 @@
   &-info {
     padding-top: 50px;
     display: flex;
+
+    @include media("<tablet") {
+      flex-direction: column;
+    }
   }
 }
 
+
 .info {
+  @include media("<tablet") {
+    margin-bottom: 30px;
+  }
+
   &__icon{
     position: relative;
     margin: 0 auto 30px;
@@ -79,20 +87,23 @@
 
 
 /*my skills*/
+
 .skills {
   position: relative;
-  text-align: center;
 
   &-overlay {
     padding: 15px 0;
     background: rgba(138, 139, 139, 0.4);
   }
-  .h4, h2 {
+  .h4, .h2 {
     color: $white;
   }
+  .h2_orange {
+    color: $accent;
+  }
+  
   .bg-holder {
-    padding-top: 70px;
-    height: 490px;
+    padding: 70px 0;
   }
 }
 
@@ -100,7 +111,12 @@
 
   &_wrap {
     display: flex;
-    margin-top: 20px;
+    flex-wrap: wrap;
+    margin-top: 30px;
+
+    @include media("<tablet") {
+      justify-content: center;
+    }
   }
 
   &__circle {
@@ -146,7 +162,7 @@
     stroke-width: 11;
     stroke-dasharray: 534;
     animation-play-state: running;
-    animation-duration: 0.5s;
+    animation-duration: 0.3s;
     opacity: 1;
   }
 
@@ -162,27 +178,269 @@
 }
 
 @keyframes show85 {
-  from {  stroke-dashoffset: 537;  }
-  to {  stroke-dashoffset: 200;  }
+  from {  stroke-dashoffset: 537; stroke: $accent; }
+  to {  stroke-dashoffset: 200; stroke: $accent; }
 }
 
 @keyframes show25 {
-  from {  stroke-dashoffset: 537;  }
-  to {  stroke-dashoffset: 430;  }
+  from {  stroke-dashoffset: 537; stroke: $accent;  }
+  to {  stroke-dashoffset: 430; stroke: $accent;  }
 }
 
 @keyframes show50 {
-  from {  stroke-dashoffset: 537;  }
-  to {  stroke-dashoffset: 330;  }
+  from {  stroke-dashoffset: 537; stroke: $accent;  }
+  to {  stroke-dashoffset: 330; stroke: $accent;  }
 }
 
 @keyframes show70 {
-  from {  stroke-dashoffset: 537;  }
-  to {  stroke-dashoffset: 250;  }
+  from {  stroke-dashoffset: 537; stroke: $accent;  }
+  to {  stroke-dashoffset: 250; stroke: $accent;  }
 }
 
 
 
+/*resume*/
+
+.resume {
+  padding: 20px 0 50px;
+
+  &_wrap {
+    background: #f5f5f5;
+  }
+  &_wrap1 {
+    background: #e6e6e6;
+  }
+
+  .h4 {
+    &_orange {
+      margin: 30px 0 20px;
+      color: #ed6866;
+      font-family: 'comfortaa-regular';
+      text-transform: none;
+    }
+    @include media("<tablet") {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.resumes {
+  padding-right: 15px;
+  margin-bottom: 50px;
+  overflow: hidden;
+  border-right: 1px solid #C4C5C5;
+  text-align: right;
+
+  @include media("<tablet") {
+    margin: 0 0 0;
+  }
+
+  &_wrap {
+    display: flex;
+
+    @include media("<tablet") {
+      flex-direction: column;
+      padding: 0 20px;
+    }
+  }
+
+  &__date {
+    position: relative;
+    padding-bottom: 10px;
+    margin-top: 18px;
+    font-family: 'russo';
+    color: #3a3a3a;
+    font-size: 1.71em;
+    font-weight: bold;
+
+    &:before {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      content: "";
+      display: block;
+      width: 150px;
+      height: 1px;
+      background: #C4C5C5;
+    }
+    
+    &_orange {
+      color: $accent;
+    }
+  }
+
+  &__text {
+    margin: 0 0 15px 50px;
+  }
+}
+
+.h6 {
+  &_orange {
+    margin: 10px 0;
+    color: $accent;
+  }
+  &_gray {
+    color: $light-gray;
+  }
+}
+
+.experience {
+  margin: 5px 0 30px;
+  padding-left: 15px;
+  overflow: hidden;
+  text-align: left;
+
+  &_first {
+    @include media("<tablet") {
+      margin: 0
+    }
+  }
+
+  &__heading {
+    margin: 10px 0;
+  }
+
+  &__text {
+    margin-bottom: 10px;
+  }
+}
+
+
+/* portfolio section */
+
+.portfolio {
+
+  &_wrap {
+    background: $accent;
+    padding: 20px 0;
+  }
+  .h2, .h4 {
+    color: $white;
+  }
+}
+
+// change content-filter plugin
+.cd-tab-filter-wrapper {
+  margin: 40px 0 40px;
+  box-shadow: none;
+  background: transparent;
+
+  @include media("<tablet") {
+    margin: 45px 0 70px;
+  }
+}
+.cd-main-content.is-fixed .cd-tab-filter-wrapper {
+  position: static;
+}
+
+.cd-tab-filter ul,
+.cd-tab-filter.is-open ul {
+  box-shadow: none;
+  padding: 0;
+}
+
+.cd-tab-filter::after {
+  display: none;
+}
+
+.cd-main-content {
+  min-height: auto;
+}
+.cd-main-content.is-fixed .cd-gallery {
+  padding-top: 0;
+}
+
+.cd-tab-filter {
+  height: auto;
+  text-align: center;
+
+  li {
+    position: relative;
+
+    @include media(">=tablet") {
+      margin: 0 3px;
+    }
+  }
+
+  .btn {
+    height: 46px;
+    line-height: 46px;
+    font-size: 0.9em;
+    color: $white;
+    padding-top: 0;
+    padding-bottom: 0;
+
+    @include media("<tablet") {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    }
+
+    &.selected{
+      color: $white;
+      background: $light-black;
+      box-shadow: none;
+    }
+    &:focus,
+    &:hover,
+    &:active,
+    &.selected {
+      color: $black;
+    }
+  }
+}
+
+.cd-gallery {
+  padding: 0;
+
+  ul {
+    margin: 0 auto;
+    @extend %listreset;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    @include media("<tablet") {
+      padding: 20px 0;
+    }
+  }
+
+  li {
+    position: relative;
+    padding: 0 15px;
+    box-shadow: none;
+
+    @include media("<tablet") {
+      flex-basis: 50%;
+      margin-bottom: 30px;
+    }
+    @include media("<480px") {
+      flex-basis: 100%;
+    }
+    @include media(">=tablet") {
+      flex-basis: 25%;
+    }
+
+    //&::before {
+    //  content: '';
+    //  position: absolute;
+    //  top: 0;
+    //  left: 0;
+    //  bottom: 0;
+    //  right: 0;
+    //  background: rgba(231, 74, 61, 0.81);
+    //  opacity: 0;
+    //  @extend %transition;
+    //}
+    //&:hover::before,
+    //&:focus::before {
+    //  opacity: 1;
+    //}
+    //&:hover .li-over,
+    //&:focus .li-over {
+    //  opacity: 1;
+    //}
+  }
+
+}
 
 
 
