--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -21,6 +21,10 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: $h2-font-size;
+
+  @include media("<tablet") {
+    font-size: 2.7em;
+  }
 }
 
 h3, .h3 {
@@ -33,6 +37,10 @@ h4, .h4 {
   font-size: $h4-font-size;
   font-family: 'sarina';
   text-transform: lowercase;
+
+  @include media("<tablet") {
+    font-size: 1.65em;
+  }
 }
 
 h5, .h5 {
