--- a/app/scss/layout/_common.scss
+++ b/app/scss/layout/_common.scss
@@ -2,15 +2,19 @@
                             Сommon
    ---------------------------------------------------------*/
 // preloader
+
 #hellopreloader_preload{
   display: block;
   position: fixed;
   z-index: 99999;
-  top: 0;left: 0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background: #4b4b4b url(http://hello-site.ru//main/images/preloads/circles.svg) center center no-repeat;
-  background-size:41px;
+  //background: #4b4b4b url(http://hello-site.ru//main/images/preloads/circles.svg) center center no-repeat;
+  //background: #000000 url(http://hello-site.ru//main/images/preloads/oval.svg) center center no-repeat;
+  background: #000000 url(http://hello-site.ru//main/images/preloads/rings.svg) center center no-repeat;
+  background-size:100px;
 }
 
 // button to top
