fix some mistakes

--- a/app/scss/base/_buttons.scss
+++ b/app/scss/base/_buttons.scss
@@ -20,6 +20,7 @@
   text-transform: uppercase;
   text-align: center;
   z-index: 3;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
   @extend %transition;
 
   &:before {
