--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -19,14 +19,14 @@
     transform: translateX(-50%);
     width: 300px;
     height: 300px;
-    border: 15px solid rgba(255, 255, 255, 0.71);
-    background: #3b3c3c url("/img/photoTanya.jpg") no-repeat;
-    background-size: 120%;
-    background-position: 45% 35%;
+    border: 15px solid rgba(255, 255, 255, 0.7);
+    background: #3a3b3b url("../img/tanya.png") no-repeat;
+    background-size: 110%;
+    background-position: 20% 0%;
     background-clip: content-box;
     border-radius: 50%;
-
   }
+
   &__subheading {
     color: $accent;
     font-weight: bold;
@@ -351,10 +351,16 @@
   padding-top: 0;
 }
 
+//.no-touch .cd-tab-filter a:hover {
+//  @include media(">=tablet") {
+//    color: $black !important;
+//  }
+//}
+
 .cd-tab-filter {
   height: auto;
   text-align: center;
-  z-index: 5;
+  //z-index: 5;
 
   li {
     position: relative;
@@ -468,12 +474,13 @@
       font-family: 'FontAwesome';
       border-radius: 50%;
       transform: scale(2);
-      @extend %transition;
+      transition: all .2s ease;
     }
     &:hover::after,
     &:focus::after {
       opacity: 1;
       transform: scale(1);
+      @extend %transition;
     }
   }
 }
@@ -560,8 +567,6 @@
     }
   }
 }
-
-
 
 
 
