--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -29,6 +29,8 @@
 
   &__logo {
     display: block;
+    width: 200px;
+    margin: 0 auto;
     color: $accent;
     font-size: 5.71em;
     font-family: sarina;
@@ -150,6 +152,7 @@
   }
 
   &__over {
+    cursor: pointer;
     overflow: hidden;
     width: 62px;
     background: transparent;
